[tool.poetry]
name = "ci-test"
version = "0.1.0"
description = ""
authors = ["Shin Umeda <umeda.shin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
